# hold-the-line

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.job  train.job  tts.job
.github/workflows/: docker.yaml
data_processed/: Bay-Area-Companies-List_processed.csv
data_processed/trees/tree_0_3scale/: callTree.json  callTreeReplaced.json  callTreeReplacedWithGoals.json  description.txt  replacements.json
data_processed/trees/tree_100_Boxbot/: callTree.json  callTreeReplaced.json  callTreeReplacedWithGoals.json  description.txt  (+1 more)
demo/: DEPLOYMENT_GUIDE.md  Dockerfile  README.md  app.py  debug_data_path.sh  docker-compose.ssl.yml  docker-compose.yml  nginx.conf  requirements.txt
demo/static/: script.js  style.css  style_old.css
demo/templates/: index.html
dumps/: 12026_208  9437-89
src/classes/: Action.py  ActionTokenResultTree.py  ActionTokenTree.py  ActionType.py  Call.py  ConditionalBlocker.py  Dial.py  Environment.py  Episode.py  EpisodeEnvironment.py  EpisodeStateMachine.py  Goal.py  OnlineCallStateMachine.py  Process.py  Sample.py  StateMachine.py  ToyEpisodeStateMachine.py  TrainingProcess.py  __init__.py
src/dataloading/: EpisodeLoader.py
src/models/: BarkTTS.py  ModelIdentifier.py
src/scripts/: OpenAIService.py  generate_call_trees.py  generate_folders_with_descriptions.py  generate_goals.py  whisper_online.py
src/services/: CallService.py  FakeCallServiceStub.py  LLMService.py  TranscriptionService.py
src/training/: Trainer.py  episode_storage.py
src/transceivers/: CallClient.py  LLMAgent.py  Listener.py  MotorFunction.py  Printer.py  Transceiver.py  Transcriber.py
src/utils/: __init__.py
(+3791 files in other folders)
