[tool.poetry]
name = "whisper-titans"
version = "0.1.0"
description = "WhisperTitans implements memory at test time into the whisper model."
authors = ["adala <adala@itu.dk>"]
readme = "README.md"

packages = [{ include = "dataloading", from = "src" },
    { include = "models", from = "src" },
    { include = "training", from = "src" },
    { include = "utils", from = "src" },
    { include = "transceivers", from = "src" },
    { include = "services", from = "src" },
    { include = "classes", from = "src" },
    ]
[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.10.0"
transformers = "^4.48.3"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
datasets = "^3.5.0"
soundfile = "^0.13.1"
llvmlite = "^0.44.0"
numba = "^0.61.0"
numpy = "^2.1.3"
librosa = "^0.10.2.post1"
wandb = "^0.19.6"
tqdm = "^4.67.1"
evaluate = "^0.4.3"
jiwer = "^3.1.0"
accelerate = "^1.4.0"
dotenv = "^0.9.9"
ollama = "^0.4.7"
openai = "^1.65.4"
flask = "^3.1.0"
mlx-whisper = { version = "^0.4.2", platform="darwin" }
faster-whisper = { version = "^1.1.1", platform="linux" }
colorama = "^0.4.6"
trl = ">0.15.0,<=0.15.2"
peft = "^0.15.1"
triton = { version = "^3.2.0", platform="linux" }
unsloth = { version = "^2025.3.19", platform="linux" }
xformers = { version = "^0.0.29.post3", platform="linux" }
bitsandbytes = { version = "^0.45.4", platform="linux" }
sounddevice = "^0.5.1"
ctranslate2 = "4.4.0"
flask-cors = "^6.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"